# Physical-Ai-Humanoid-Robotics-TextBook

./: .gitignore  AGENTS.md  README.md  opencode.md  package-lock.json  pyproject.toml  sidebars.ts  vercel.json
Backend/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  main.py  main_agent.py  pyproject.toml  requirements.txt
Backend/Agent/: .gitignore  __init__.py  adapter.py  agent.py  error_handling.py  health_monitor.py  logging_config.py  main.py  middleware.py  pyproject.toml  requirements-dev.txt  settings.py  test_adapter.py  test_agent.py  test_core_functionality.py  validation.py
Backend/Connection/: __init__.py  agent_wrapper.py  api.py  config.py  context_switcher.py  guardrails.py  main.py  models.py  requirements.txt  response_formatter.py  tts_router.py
Backend/Ingestion/: .gitignore  README.md  ingest_book.py
Backend/Ingestion/docs/: backup_recovery.md  setup_guide.md  usage_guide.md
Backend/Ingestion/src/config/: settings.py
Backend/Ingestion/src/ingestion/: chunker.py  document_processor.py  embedder.py  exceptions.py  logging_config.py  models.py  performance_monitor.py  rag_api.py  search_interface.py  text_cleaner.py  utils.py  vector_store.py  (+1 more)
Backend/Ingestion/tests/: test_chunker.py  test_comprehensive.py  test_document_processor.py  test_end_to_end.py  test_rag_integration.py  test_search_interface.py  test_text_cleaner.py  test_vectorizer.py  test_vectorizer_integration.py
Backend/Retrieval/: requirements.txt  retrieval_logs.json  test_simple.py
Backend/services/tts/: __init__.py  config.py  engine.py
(+186 files in other folders)
