[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "qdrant-client",
    "numpy",
    "pandas",
    "openai",
    "python-dotenv",
    "cohere",
    "openai-agents",
    "pytest",
    "pydantic-settings",
    "edge-tts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
